// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptInstallServiceStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Let us install the latest version on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    It looks like the Accessibility Insights for Android Service on your device is either missing or out of date. We'll need to install the latest version.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      Object {
        "friendlyName": "Super-Duper Gadget",
        "id": "1",
        "isEmulator": false,
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="install"
    onClick={[Function]}
    text="Install"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptInstallServiceStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Let us install the latest version on your device"
  leftFooterButtonProps={
    Object {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  rightFooterButtonProps={
    Object {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    It looks like the Accessibility Insights for Android Service on your device is either missing or out of date. We'll need to install the latest version.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      Object {
        "friendlyName": "Emulator Extraordinaire",
        "id": "1",
        "isEmulator": true,
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="install"
    onClick={[Function]}
    text="Install"
  />
</AndroidSetupStepLayout>
`;
